--- a/.gitignore
+++ b/.gitignore
@@ -50,13 +50,14 @@ coverage.xml
 .pytest_cache/
 
 # Translations
-*.mo
-*.pot
+#*.mo
+#*.pot
 
 # Django stuff:
 *.log
 local_settings.py
-db.sqlite3
+*.db
+*.sqlite3
 
 # Flask stuff:
 ##instance/
