--- a/flask-app/instance/conf/mtw.ini
+++ b/flask-app/instance/conf/mtw.ini
@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-# *** Config version 0.1.6 ***
+# *** Config version 0.1.7 ***
 ### Important values are marked with !  ###
 ### ! This file MUST BE UTF-8 encoded ! ###
 ### ! Restart the App after modifying ! ###
@@ -87,6 +87,9 @@ MESH_TREE = {
 
 ### Background Worker host:port [dev: 5903 -- prod: 55933] ###
 WORKER_HOST = http://localhost:5903/
+
+### Base URL prefix - default: None ###
+#APP_URL_PREFIX = /fr
 
 
 [sparqlconf]
