--- a/flask-app/instance/conf/mtw.ini
+++ b/flask-app/instance/conf/mtw.ini
@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-# *** Config version 0.1.7 ***
+# *** Config version 1.0.8 ***
 ### Important values are marked with !  ###
 ### ! This file MUST BE UTF-8 encoded ! ###
 ### ! Restart the App after modifying ! ###
@@ -9,12 +9,18 @@
 
 [appconf]
 
+### ! Background Worker host:port ! ###
+## Default - production: http://localhost:55933/ - development: http://localhost:5903/ ##
+#WORKER_HOST = http://localhost:5903/
+
 ### ! Always set ! ###
 TARGET_YEAR = 2020
-## Default previous version year - used for showing modifications ##
+
+### Default previous version year - used for showing modifications ###
 PREV_YEAR_DEF = 2018
 PREV_YEARS = 2015,2016,2017,2018,2019
-## Date format:  YYYY-MM-DD ##
+
+### Date format:  YYYY-MM-DD ###
 REVISED_AFTER = 2018-12-01
 CREATED_AFTER = 2018-12-01
 
@@ -24,14 +30,14 @@ MARC_CATCODE = ABA008
 MARC_MESHCODE = czmesh
 
 ### Default MARC export style: mrk OR line ###
-##  mrk   - for MarcEdit conversion to ISO2709 ##
 ##  line  - for yaz-marcdump conversion to ISO2709 ##
+##  mrk   - for MarcEdit conversion to ISO2709 ##
 #MARC_LINE = line
 
 ### Default MARC tree style: def OR daw ###
 ##  def  - field 072 ##
 ##  daw  - field 686 ##
-MARC_TREE = daw
+#MARC_TREE = def
 
 ### Available Bootstrap themes: slate, spacelab, flatly - default: slate ###
 #DEFAULT_THEME = spacelab
@@ -45,9 +51,9 @@ REFRESH_AFTER = 30
 ### Inactivity logout interval in minutes - default: 20 ###
 LOGOUT_AFTER = 120
 
-### Permanent link prefix to Your authority record display ###
+### Permanent link prefix to your authority record display webpage ###
 ##  Default: /mtw/search/ui:
-AUT_LINK = https://www.medvik.cz/link/
+#AUT_LINK = https://www.medvik.cz/link/
 
 ### ! Translated MeSH Tree Top ! ###
 MESH_TREE = {
@@ -73,23 +79,21 @@ MESH_TREE = {
             }
 
 
-### TODO (?) ###
-##PID_PREFIX_CONCEPT = F
-##PID_PREFIX_TERM = cze
-
 ### Data directories ###
-## Defaults - relative to app directory: .../flask-app/instance/_data/... ##
+## Defaults: relative to app directory: .../flask-app/instance/_data/... ##
 #SRC_DIR = D:/Data/mesh/in
 #EXP_DIR = D:/Data/mesh/out
 
-### Default values:
-#DATABASE_NAME = mtw.db
 
-### Background Worker host:port [dev: 5903 -- prod: 55933] ###
-WORKER_HOST = http://localhost:5903/
+### Default management database name ###
+#DATABASE_NAME = mtw.db
 
 ### Base URL prefix - default: None ###
 #APP_URL_PREFIX = /fr
+
+### TODO (?) - currently not in use ###
+##PID_PREFIX_CONCEPT = F
+##PID_PREFIX_TERM = cze
 
 
 [sparqlconf]
@@ -99,6 +103,7 @@ WORKER_HOST = http://localhost:5903/
 TARGET_LANG = cs
 
 ### ! Target translation namespace ! ###
+##  the custom URI prefix for you translation ##
 TARGET_NS = http://mesh.medvik.cz/link/
 
 ### ! Source namespace ! ###
@@ -124,10 +129,10 @@ TARGET_NS = http://mesh.medvik.cz/link/
 
 [flowconf]
 
-### DO NOT EDIT BELOW THIS LINE ###
-
 ### Translatable Decriptor notes: ###
 TRX_NOTES = annotation,considerAlso,historyNote
+
+### DO NOT EDIT BELOW THIS LINE ###
 
 DESC_NOTES = annotation,considerAlso,historyNote,onlineNote,publicMeSHNote,translatorsNote
 
