--- a/flask-app/instance/conf/mtw.ini
+++ b/flask-app/instance/conf/mtw.ini
@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-# *** Config version 1.0.8 ***
+# *** Config version 1.0.9 ***
 ### Important values are marked with !  ###
 ### ! This file MUST BE UTF-8 encoded ! ###
 ### ! Restart the App after modifying ! ###
@@ -11,7 +11,7 @@
 
 ### ! Background Worker host:port ! ###
 ## Default - production: http://localhost:55933/ - development: http://localhost:5903/ ##
-#WORKER_HOST = http://localhost:5903/
+#WORKER_HOST = http://localhost:55933/
 
 ### ! Always set ! ###
 TARGET_YEAR = 2020
@@ -29,7 +29,7 @@ MARC_LIBCODE = CZ-PrNML
 MARC_CATCODE = ABA008
 MARC_MESHCODE = czmesh
 
-### Default MARC export style: mrk OR line ###
+### Default MARC export style ###
 ##  line  - for yaz-marcdump conversion to ISO2709 ##
 ##  mrk   - for MarcEdit conversion to ISO2709 ##
 #MARC_LINE = line
@@ -42,14 +42,14 @@ MARC_MESHCODE = czmesh
 ### Available Bootstrap themes: slate, spacelab, flatly - default: slate ###
 #DEFAULT_THEME = spacelab
 
-### Clipboard items count - default 20 ###
-CLIPBOARD_SIZE = 30
+### Clipboard items count - default: 20 ###
+#CLIPBOARD_SIZE = 30
 
-### Actual stats refresh interval in minutes - default: 20 ###
-REFRESH_AFTER = 30
+### Actual stats refresh interval in minutes - default: 60 ###
+#REFRESH_AFTER = 60
 
-### Inactivity logout interval in minutes - default: 20 ###
-LOGOUT_AFTER = 120
+### Inactivity logout interval in minutes - default: 30 ###
+#LOGOUT_AFTER = 60
 
 ### Permanent link prefix to your authority record display webpage ###
 ##  Default: /mtw/search/ui:
