--- a/flask-app/instance/conf/mtw.ini
+++ b/flask-app/instance/conf/mtw.ini
@@ -11,18 +11,19 @@
 
 ### ! Background Worker host:port ! ###
 ## Default - production: http://localhost:55933/ - development: http://localhost:5903/ ##
-#WORKER_HOST = http://localhost:55933/
+#WORKER_HOST = http://localhost:5903/
+WORKER_HOST = http://localhost:55933/
 
 ### ! Always set ! ###
 TARGET_YEAR = 2020
 
 ### Default previous version year - used for showing modifications ###
-PREV_YEAR_DEF = 2018
+PREV_YEAR_DEF = 2019
 PREV_YEARS = 2015,2016,2017,2018,2019
 
 ### Date format:  YYYY-MM-DD ###
-REVISED_AFTER = 2018-12-01
-CREATED_AFTER = 2018-12-01
+REVISED_AFTER = 2019-01-01
+CREATED_AFTER = 2019-01-01
 
 ### ! Always set ! ###
 MARC_LIBCODE = CZ-PrNML
