--- a/flask-app/instance/conf/mtw.ini
+++ b/flask-app/instance/conf/mtw.ini
@@ -1,29 +1,34 @@
 # -*- coding: utf-8 -*-
-# *** Config version 1.0.9 ***
+# *** Config version 1.1.0 ***
 ### Important values are marked with !  ###
 ### ! This file MUST BE UTF-8 encoded ! ###
 ### ! Restart the App after modifying ! ###
-### ! Alway use forward slash:   /    ! ###
+### ! Alway use forward slash /       ! ###
+### ! Use trailing slash / (if not WITHOUT)
 ### ! '%' char must be doubled:  %%   ! ###
 
 
 [appconf]
 
+### ! Required ! ###
+### Host root link prefix - WITHOUT trailing slash ! ###
+#HOST_LINK = http://localhost:5900
+
 ### ! Background Worker host:port ! ###
 ## Default - production: http://localhost:55933/ - development: http://localhost:5903/ ##
-#WORKER_HOST = http://localhost:5903/
-WORKER_HOST = http://localhost:55933/
+WORKER_HOST = http://localhost:5903/
+#WORKER_HOST = http://localhost:55933/
 
 ### ! Always set ! ###
-TARGET_YEAR = 2020
+TARGET_YEAR = 2021
 
 ### Default previous version year - used for showing modifications ###
-PREV_YEAR_DEF = 2019
-PREV_YEARS = 2015,2016,2017,2018,2019
+PREV_YEAR_DEF = 2020
+PREV_YEARS = 2015,2016,2017,2018,2019,2020
 
 ### Date format:  YYYY-MM-DD ###
-REVISED_AFTER = 2019-01-01
-CREATED_AFTER = 2019-01-01
+REVISED_AFTER = 2020-01-01
+CREATED_AFTER = 2020-01-01
 
 ### ! Always set ! ###
 MARC_LIBCODE = CZ-PrNML
@@ -33,12 +38,12 @@ MARC_MESHCODE = czmesh
 ### Default MARC export style ###
 ##  line  - for yaz-marcdump conversion to ISO2709 ##
 ##  mrk   - for MarcEdit conversion to ISO2709 ##
-#MARC_LINE = line
+#MARC_LINE = mrk
 
 ### Default MARC tree style: def OR daw ###
 ##  def  - field 072 ##
 ##  daw  - field 686 ##
-#MARC_TREE = def
+#MARC_TREE = daw
 
 ### Available Bootstrap themes: slate, spacelab, flatly - default: slate ###
 #DEFAULT_THEME = spacelab
@@ -85,16 +90,35 @@ MESH_TREE = {
 #SRC_DIR = D:/Data/mesh/in
 #EXP_DIR = D:/Data/mesh/out
 
-
-### Default management database name ###
-#DATABASE_NAME = mtw.db
+### Custom concept prefix - default: F ###
+#PID_PREFIX_CONCEPT = F
 
 ### Base URL prefix - default: None ###
 #APP_URL_PREFIX = /fr
 
-### TODO (?) - currently not in use ###
-##PID_PREFIX_CONCEPT = F
-##PID_PREFIX_TERM = cze
+### Default management database name ###
+#DATABASE_NAME = mtw.db
+
+### Default - False
+DEV_DISABLE_CSRF = True
+
+## Flask-Caching params
+## See: https://flask-caching.readthedocs.io/en/latest/
+## - override:
+#CACHE_IGNORE_ERRORS = False
+## In production use: memcached
+CACHING = {"CACHE_TYPE": "filesystem", "CACHE_DEFAULT_TIMEOUT": 1800, "CACHE_THRESHOLD": 1000}
+#CACHING = {"CACHE_TYPE": "memcached", "CACHE_DEFAULT_TIMEOUT": 1800, "CACHE_KEY_PREFIX": "MTWC"}
+
+## Flask-Session params
+## See: https://pythonhosted.org/Flask-Session/
+## In production use: filesystem
+## - and set: "SESSION_COOKIE_SECURE": true
+SESSIONS = {"SESSION_COOKIE_NAME": "mtwsession", "SESSION_TYPE": "filesystem", "PERMANENT_SESSION_LIFETIME": 14400, "SESSION_KEY_PREFIX": "MTWS", 
+            "SESSION_FILE_THRESHOLD": 1000
+           }
+
+#SESSIONS = {"SESSION_COOKIE_NAME": "mtwsession", "SESSION_TYPE": "memcached", "PERMANENT_SESSION_LIFETIME": 14400, "SESSION_KEY_PREFIX": "MTWS"}
 
 
 [sparqlconf]
