--- a/flask-app/instance/conf/mtw.ini
+++ b/flask-app/instance/conf/mtw.ini
@@ -12,12 +12,12 @@
 
 ### ! Required ! ###
 ### Host root link prefix - WITHOUT trailing slash ! ###
-#HOST_LINK = http://localhost:5900
+HOST_LINK = http://127.0.0.1:5900
 
 ### ! Background Worker host:port ! ###
-## Default - production: http://localhost:55933/ - development: http://localhost:5903/ ##
-WORKER_HOST = http://localhost:5903/
-#WORKER_HOST = http://localhost:55933/
+## Default - production: http://127.0.0.1:55933/ - development: http://127.0.0.1:5903/ ##
+WORKER_HOST = http://127.0.0.1:5903/
+#WORKER_HOST = http://127.0.0.1:55933/
 
 ### ! Always set ! ###
 TARGET_YEAR = 2021
@@ -38,12 +38,12 @@ MARC_MESHCODE = czmesh
 ### Default MARC export style ###
 ##  line  - for yaz-marcdump conversion to ISO2709 ##
 ##  mrk   - for MarcEdit conversion to ISO2709 ##
-#MARC_LINE = mrk
+MARC_LINE = mrk
 
 ### Default MARC tree style: def OR daw ###
 ##  def  - field 072 ##
 ##  daw  - field 686 ##
-#MARC_TREE = daw
+MARC_TREE = daw
 
 ### Available Bootstrap themes: slate, spacelab, flatly - default: slate ###
 #DEFAULT_THEME = spacelab
@@ -59,7 +59,7 @@ MARC_MESHCODE = czmesh
 
 ### Permanent link prefix to your authority record display webpage ###
 ##  Default: /mtw/search/ui:
-#AUT_LINK = https://www.medvik.cz/link/
+AUT_LINK = https://www.medvik.cz/link/
 
 ### ! Translated MeSH Tree Top ! ###
 MESH_TREE = {
@@ -137,7 +137,7 @@ TARGET_NS = http://mesh.medvik.cz/link/
 #SOURCE_NS = http://id.nlm.nih.gov/mesh/2019/
 
 ### Default values:
-#SPARQL_HOST = http://localhost:3030/
+#SPARQL_HOST = http://127.0.0.1:3030/
 #SPARQL_DATASET = mesh
 
 ### DO NOT EDIT BELOW THIS LINE ###
