--- a/flask-app/instance/conf/mtw.ini
+++ b/flask-app/instance/conf/mtw.ini
@@ -17,7 +17,6 @@ HOST_LINK = http://127.0.0.1:5900
 ### ! Background Worker host:port ! ###
 ## Default - production: http://127.0.0.1:55933/ - development: http://127.0.0.1:5903/ ##
 WORKER_HOST = http://127.0.0.1:5903/
-#WORKER_HOST = http://127.0.0.1:55933/
 
 ### ! Always set ! ###
 TARGET_YEAR = 2021
@@ -105,7 +104,7 @@ DEV_DISABLE_CSRF = True
 ## Flask-Caching params
 ## See: https://flask-caching.readthedocs.io/en/latest/
 ## - override:
-#CACHE_IGNORE_ERRORS = False
+#CACHE_IGNORE_ERRORS = True
 ## In production use: memcached
 CACHING = {"CACHE_TYPE": "filesystem", "CACHE_DEFAULT_TIMEOUT": 1800, "CACHE_THRESHOLD": 1000}
 #CACHING = {"CACHE_TYPE": "memcached", "CACHE_DEFAULT_TIMEOUT": 1800, "CACHE_KEY_PREFIX": "MTWC"}
@@ -114,11 +113,12 @@ CACHING = {"CACHE_TYPE": "filesystem", "CACHE_DEFAULT_TIMEOUT": 1800, "CACHE_THR
 ## See: https://pythonhosted.org/Flask-Session/
 ## In production use: filesystem
 ## - and set: "SESSION_COOKIE_SECURE": true
-SESSIONS = {"SESSION_COOKIE_NAME": "mtwsession", "SESSION_TYPE": "filesystem", "PERMANENT_SESSION_LIFETIME": 14400, "SESSION_KEY_PREFIX": "MTWS", 
-            "SESSION_FILE_THRESHOLD": 1000
-           }
-
-#SESSIONS = {"SESSION_COOKIE_NAME": "mtwsession", "SESSION_TYPE": "memcached", "PERMANENT_SESSION_LIFETIME": 14400, "SESSION_KEY_PREFIX": "MTWS"}
+SESSIONS = {"SESSION_COOKIE_NAME": "mtwdevsession", "SESSION_TYPE": "filesystem", "PERMANENT_SESSION_LIFETIME": 14400, "SESSION_KEY_PREFIX": "MTWS",
+            "SESSION_FILE_THRESHOLD": 1000, 
+            "SESSION_COOKIE_SECURE": false
+            }
+#SESSIONS = {"SESSION_COOKIE_NAME": "mtwdevsession", "SESSION_TYPE": "memcached", "PERMANENT_SESSION_LIFETIME": 14400, "SESSION_KEY_PREFIX": "MTWS",
+#             "SESSION_COOKIE_SECURE": true }
 
 
 [sparqlconf]
