--- a/flask-app/instance/conf/mtw.ini
+++ b/flask-app/instance/conf/mtw.ini
@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-# *** Config version 1.1.0 ***
+# *** Config version 1.2.0 ***
 ### Important values are marked with !  ###
 ### ! This file MUST BE UTF-8 encoded ! ###
 ### ! Restart the App after modifying ! ###
@@ -9,6 +9,11 @@
 
 
 [appconf]
+
+### ! Required ! ###
+## Default: /
+## Always starts with: /
+APP_PATH = /mtw
 
 ### ! Required ! ###
 ### Host root link prefix - WITHOUT trailing slash ! ###
@@ -83,7 +88,6 @@ MESH_TREE = {
               "Z": {"en": "Geographicals", "cs": "Geografická místa"}
             }
 
-
 ### Data directories ###
 ## Defaults: relative to app directory: .../flask-app/instance/_data/... ##
 #SRC_DIR = D:/Data/mesh/in
@@ -92,31 +96,33 @@ MESH_TREE = {
 ### Custom concept prefix - default: F ###
 #PID_PREFIX_CONCEPT = F
 
-### Base URL prefix - default: None ###
-#APP_URL_PREFIX = /fr
-
 ### Default management database name ###
 #DATABASE_NAME = mtw.db
 
 ### Default - False
 DEV_DISABLE_CSRF = True
 
-## Flask-Caching params
+### Default - True
+#CSRF_COOKIE_SECURE = False
+
+### Flask-Caching params
 ## See: https://flask-caching.readthedocs.io/en/latest/
 ## - override:
 #CACHE_IGNORE_ERRORS = True
-## In production use: memcached
 CACHING = {"CACHE_TYPE": "filesystem", "CACHE_DEFAULT_TIMEOUT": 1800, "CACHE_THRESHOLD": 1000}
+
+## In production use: memcached
 #CACHING = {"CACHE_TYPE": "memcached", "CACHE_DEFAULT_TIMEOUT": 1800, "CACHE_KEY_PREFIX": "MTWC"}
 
-## Flask-Session params
+### Flask-Session params
 ## See: https://pythonhosted.org/Flask-Session/
+
 ## In production use: filesystem
-## - and set: "SESSION_COOKIE_SECURE": true
+## and set "SESSION_COOKIE_SECURE": true
 SESSIONS = {"SESSION_COOKIE_NAME": "mtwdevsession", "SESSION_TYPE": "filesystem", "PERMANENT_SESSION_LIFETIME": 14400, "SESSION_KEY_PREFIX": "MTWS",
-            "SESSION_FILE_THRESHOLD": 1000, 
-            "SESSION_COOKIE_SECURE": false
+            "SESSION_FILE_THRESHOLD": 1000, "SESSION_COOKIE_SECURE": false
             }
+
 #SESSIONS = {"SESSION_COOKIE_NAME": "mtwdevsession", "SESSION_TYPE": "memcached", "PERMANENT_SESSION_LIFETIME": 14400, "SESSION_KEY_PREFIX": "MTWS",
 #             "SESSION_COOKIE_SECURE": true }
 
