--- a/flask-app/instance/conf/mtw.ini
+++ b/flask-app/instance/conf/mtw.ini
@@ -10,9 +10,9 @@
 
 [appconf]
 
-### ! Required ! ###
 ## Default: /
 ## Always starts with: /
+## No trailing slash !
 APP_PATH = /mtw
 
 ### ! Required ! ###
