--- a/flask-app/instance/conf/mtw.ini
+++ b/flask-app/instance/conf/mtw.ini
@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-# *** Config version 1.2.0 ***
+# *** Config version 1.3.0 ***
 ### Important values are marked with !  ###
 ### ! This file MUST BE UTF-8 encoded ! ###
 ### ! Restart the App after modifying ! ###
@@ -18,10 +18,13 @@ APP_PATH = /mtw
 ### ! Required ! ###
 ### Host root link prefix - WITHOUT trailing slash ! ###
 HOST_LINK = http://127.0.0.1:5900
+#HOST_LINK = http://127.0.0.1:55930
+#HOST_LINK = https://testmtw.medvik.cz
 
 ### ! Background Worker host:port ! ###
-## Default - production: http://127.0.0.1:55933/ - development: http://127.0.0.1:5903/ ##
+## Default - production: http://127.0.0.1:55931/ - development: http://127.0.0.1:5903/ ##
 WORKER_HOST = http://127.0.0.1:5903/
+#WORKER_HOST = http://127.0.0.1:55931/
 
 ### ! Always set ! ###
 TARGET_YEAR = 2021
@@ -120,11 +123,14 @@ CACHING = {"CACHE_TYPE": "filesystem", "CACHE_DEFAULT_TIMEOUT": 1800, "CACHE_THR
 ## In production use: filesystem
 ## and set "SESSION_COOKIE_SECURE": true
 SESSIONS = {"SESSION_COOKIE_NAME": "mtwdevsession", "SESSION_TYPE": "filesystem", "PERMANENT_SESSION_LIFETIME": 14400, "SESSION_KEY_PREFIX": "MTWS",
-            "SESSION_FILE_THRESHOLD": 1000, "SESSION_COOKIE_SECURE": false
-            }
+             "SESSION_FILE_THRESHOLD": 1000, "SESSION_COOKIE_SECURE": false }
 
-#SESSIONS = {"SESSION_COOKIE_NAME": "mtwdevsession", "SESSION_TYPE": "memcached", "PERMANENT_SESSION_LIFETIME": 14400, "SESSION_KEY_PREFIX": "MTWS",
-#             "SESSION_COOKIE_SECURE": true }
+#SESSIONS = {"SESSION_COOKIE_NAME": "mtwdevsession", "SESSION_TYPE": "filesystem", "PERMANENT_SESSION_LIFETIME": 14400, "SESSION_KEY_PREFIX": "MTWS",
+#            "SESSION_FILE_THRESHOLD": 1000, "SESSION_COOKIE_SECURE": true, "SESSION_COOKIE_SAMESITE": "Lax" }
+
+
+#SESSIONS = {"SESSION_COOKIE_NAME": "mtwsession", "SESSION_TYPE": "memcached", "PERMANENT_SESSION_LIFETIME": 14400, "SESSION_KEY_PREFIX": "MTWS",
+#             "SESSION_COOKIE_SECURE": true, "SESSION_COOKIE_SAMESITE": "Strict" }
 
 
 [sparqlconf]
