--- a/flask-app/instance/conf/mtw.ini
+++ b/flask-app/instance/conf/mtw.ini
@@ -118,14 +118,14 @@ CACHING = {"CACHE_TYPE": "filesystem", "CACHE_DEFAULT_TIMEOUT": 1800, "CACHE_THR
 #CACHING = {"CACHE_TYPE": "memcached", "CACHE_DEFAULT_TIMEOUT": 1800, "CACHE_KEY_PREFIX": "MTWC"}
 
 ### Flask-Session params
-## See: https://pythonhosted.org/Flask-Session/
+## See: https://flasksession.readthedocs.io/en/latest/
 
 ## In production use: filesystem
 ## and set "SESSION_COOKIE_SECURE": true
-SESSIONS = {"SESSION_COOKIE_NAME": "mtwdevsession", "SESSION_TYPE": "filesystem", "PERMANENT_SESSION_LIFETIME": 14400, "SESSION_KEY_PREFIX": "MTWS",
+SESSIONS = {"SESSION_COOKIE_NAME": "mtwdevsession1", "SESSION_TYPE": "filesystem", "PERMANENT_SESSION_LIFETIME": 14400, "SESSION_KEY_PREFIX": "MTWS",
              "SESSION_FILE_THRESHOLD": 1000, "SESSION_COOKIE_SECURE": false }
 
-#SESSIONS = {"SESSION_COOKIE_NAME": "mtwdevsession", "SESSION_TYPE": "filesystem", "PERMANENT_SESSION_LIFETIME": 14400, "SESSION_KEY_PREFIX": "MTWS",
+#SESSIONS = {"SESSION_COOKIE_NAME": "mtwdevsession2", "SESSION_TYPE": "filesystem", "PERMANENT_SESSION_LIFETIME": 14400, "SESSION_KEY_PREFIX": "MTWS",
 #            "SESSION_FILE_THRESHOLD": 1000, "SESSION_COOKIE_SECURE": true, "SESSION_COOKIE_SAMESITE": "Lax" }
 
 
