--- a/flask-app/instance/conf/mtw-dist.ini
+++ b/flask-app/instance/conf/mtw-dist.ini
@@ -17,8 +17,8 @@ APP_PATH = /mtw
 ### ! Required ! ###
 ### Host root link prefix - WITHOUT trailing slash ! ###
 #HOST_LINK = http://127.0.0.1:5900
-#HOST_LINK = http://127.0.0.1:55930
-HOST_LINK = https://mtwsrv.medvik.cz
+HOST_LINK = http://127.0.0.1:55930
+#HOST_LINK = https://mtwsrv.medvik.cz
 
 ### ! Background Worker host:port ! ###
 ## Default - production: http://127.0.0.1:55933/ - development: http://127.0.0.1:5903/ ##
@@ -101,11 +101,11 @@ MESH_TREE = {
 ### Default management database name ###
 #DATABASE_NAME = mtw.db
 
-### Default - False
-#DEV_DISABLE_CSRF = True
+### Default - in production: False
+DEV_DISABLE_CSRF = True
 
-### Default - True
-#CSRF_COOKIE_SECURE = False
+### Default - in production: True
+CSRF_COOKIE_SECURE = False
 
 ### Flask-Caching params
 ## See: https://flask-caching.readthedocs.io/en/latest/
@@ -118,12 +118,12 @@ CACHING = {"CACHE_TYPE": "filesystem", "CACHE_DEFAULT_TIMEOUT": 1800, "CACHE_THR
 ## See: https://flasksession.readthedocs.io/en/latest/
 
 ## - in development:
-#SESSIONS = {"SESSION_COOKIE_NAME": "mtwdevsession", "SESSION_TYPE": "filesystem", "PERMANENT_SESSION_LIFETIME": 14400, "SESSION_KEY_PREFIX": "MTWS",
-#             "SESSION_FILE_THRESHOLD": 1000, "SESSION_COOKIE_SECURE": false, "SESSION_COOKIE_SAMESITE": "Lax", "SESSION_PERMANENT": false }
+SESSIONS = {"SESSION_COOKIE_NAME": "mtwdevsession", "SESSION_TYPE": "filesystem", "PERMANENT_SESSION_LIFETIME": 14400, "SESSION_KEY_PREFIX": "MTWS",
+             "SESSION_FILE_THRESHOLD": 1000, "SESSION_COOKIE_SECURE": false, "SESSION_COOKIE_SAMESITE": "Lax", "SESSION_PERMANENT": false }
 
 ## - in production:
-SESSIONS = {"SESSION_COOKIE_NAME": "mtwsession", "SESSION_TYPE": "filesystem", "PERMANENT_SESSION_LIFETIME": 14400, "SESSION_KEY_PREFIX": "MTWS",
-            "SESSION_FILE_THRESHOLD": 1000, "SESSION_COOKIE_SECURE": true, "SESSION_COOKIE_SAMESITE": "Strict", "SESSION_PERMANENT": true }
+#SESSIONS = {"SESSION_COOKIE_NAME": "mtwsession", "SESSION_TYPE": "filesystem", "PERMANENT_SESSION_LIFETIME": 14400, "SESSION_KEY_PREFIX": "MTWS",
+#            "SESSION_FILE_THRESHOLD": 1000, "SESSION_COOKIE_SECURE": true, "SESSION_COOKIE_SAMESITE": "Strict", "SESSION_PERMANENT": true }
 
 [sparqlconf]
 
