--- a/flask-app/instance/conf/mtw-dist.ini
+++ b/flask-app/instance/conf/mtw-dist.ini
@@ -117,7 +117,7 @@ CACHING = {"CACHE_TYPE": "filesystem", "CACHE_DEFAULT_TIMEOUT": 1800, "CACHE_THR
 ### Flask-Session params
 ## See: https://flasksession.readthedocs.io/en/latest/
 
-## - in development:
+## - in development or evaluation:
 SESSIONS = {"SESSION_COOKIE_NAME": "mtwdevsession", "SESSION_TYPE": "filesystem", "PERMANENT_SESSION_LIFETIME": 14400, "SESSION_KEY_PREFIX": "MTWS",
              "SESSION_FILE_THRESHOLD": 1000, "SESSION_COOKIE_SECURE": false, "SESSION_COOKIE_SAMESITE": "Lax", "SESSION_PERMANENT": false }
 
