--- a/flask-app/instance/conf/mtw.ini
+++ b/flask-app/instance/conf/mtw.ini
@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-# *** Config version 1.4.0 ***
+# *** Config version 1.4.1 ***
 ### Important values are marked with !  ###
 ### ! This file MUST BE UTF-8 encoded ! ###
 ### ! Restart the App after modifying ! ###
@@ -101,10 +101,10 @@ MESH_TREE = {
 ### Default management database name ###
 #DATABASE_NAME = mtw.db
 
-### Default - False
+### Default - in production: False
 DEV_DISABLE_CSRF = True
 
-### Default - True
+### Default - in production: True
 CSRF_COOKIE_SECURE = False
 
 ### Flask-Caching params
@@ -119,11 +119,19 @@ CACHING = {"CACHE_TYPE": "filesystem", "CACHE_DEFAULT_TIMEOUT": 1800, "CACHE_THR
 
 ## - in development:
 SESSIONS = {"SESSION_COOKIE_NAME": "mtwdevsession", "SESSION_TYPE": "filesystem", "PERMANENT_SESSION_LIFETIME": 14400, "SESSION_KEY_PREFIX": "MTWS",
-             "SESSION_FILE_THRESHOLD": 1000, "SESSION_COOKIE_SECURE": false, "SESSION_COOKIE_SAMESITE": "Lax" }
+            "SESSION_FILE_THRESHOLD": 1000, "SESSION_COOKIE_SECURE": false, "SESSION_COOKIE_SAMESITE": "Lax", "SESSION_PERMANENT": false }
 
 ## - in production:
 #SESSIONS = {"SESSION_COOKIE_NAME": "mtwsession", "SESSION_TYPE": "filesystem", "PERMANENT_SESSION_LIFETIME": 14400, "SESSION_KEY_PREFIX": "MTWS",
-#            "SESSION_FILE_THRESHOLD": 1000, "SESSION_COOKIE_SECURE": true, "SESSION_COOKIE_SAMESITE": "Strict" }
+#            "SESSION_FILE_THRESHOLD": 1000, "SESSION_COOKIE_SECURE": true, "SESSION_COOKIE_SAMESITE": "Lax", "SESSION_PERMANENT": true }
+
+GCSP = {"script-src":  "'self' ",
+        "connect-src": "'self' *.medvik.cz *.nlk.cz",
+        "style-src":   "'self' data: 'unsafe-inline'",
+        "frame-src":   "'self' ",
+        "font-src":    "'self' ",
+        "img-src":     "'self' *.medvik.cz *.nlk.cz data:"
+        }
 
 
 [sparqlconf]
