--- a/flask-app/instance/conf/mtw.ini
+++ b/flask-app/instance/conf/mtw.ini
@@ -26,7 +26,7 @@ WORKER_HOST = http://127.0.0.1:5903/
 #WORKER_HOST = http://127.0.0.1:55931/
 
 ### ! Always set ! ###
-TARGET_YEAR = 2021
+TARGET_YEAR = 2022
 
 ### Default previous version year - used for showing modifications ###
 PREV_YEAR_DEF = 2020
@@ -112,7 +112,9 @@ CSRF_COOKIE_SECURE = False
 
 #CACHE_IGNORE_ERRORS = True
 
-CACHING = {"CACHE_TYPE": "filesystem", "CACHE_DEFAULT_TIMEOUT": 1800, "CACHE_THRESHOLD": 1000}
+CACHING = {"CACHE_TYPE": "null"}
+
+#CACHING = {"CACHE_TYPE": "filesystem", "CACHE_DEFAULT_TIMEOUT": 1800, "CACHE_THRESHOLD": 1000}
 
 ### Flask-Session params
 ## See: https://flasksession.readthedocs.io/en/latest/
