--- a/flask-app/instance/conf/mtw.ini
+++ b/flask-app/instance/conf/mtw.ini
@@ -23,7 +23,7 @@ HOST_LINK = http://127.0.0.1:5900
 ### ! Background Worker host:port ! ###
 ## Default - production: http://127.0.0.1:55931/ - development: http://127.0.0.1:5903/ ##
 WORKER_HOST = http://127.0.0.1:5903/
-#WORKER_HOST = http://127.0.0.1:55931/
+#WORKER_HOST = http://127.0.0.1:55933/
 
 ### ! Always set ! ###
 TARGET_YEAR = 2022
@@ -112,9 +112,9 @@ CSRF_COOKIE_SECURE = False
 
 #CACHE_IGNORE_ERRORS = True
 
-CACHING = {"CACHE_TYPE": "null"}
+#CACHING = {"CACHE_TYPE": "null"}
 
-#CACHING = {"CACHE_TYPE": "filesystem", "CACHE_DEFAULT_TIMEOUT": 1800, "CACHE_THRESHOLD": 1000}
+CACHING = {"CACHE_TYPE": "filesystem", "CACHE_DEFAULT_TIMEOUT": 1800, "CACHE_THRESHOLD": 1000}
 
 ### Flask-Session params
 ## See: https://flasksession.readthedocs.io/en/latest/
