--- a/flask-app/instance/conf/mtw-dist.ini
+++ b/flask-app/instance/conf/mtw-dist.ini
@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-# *** Config version 1.4.1 ***
+# *** Config version 1.4.4 ***
 ### Important values are marked with !  ###
 ### ! This file MUST BE UTF-8 encoded ! ###
 ### ! Restart the App after modifying ! ###
@@ -40,6 +40,8 @@ CREATED_AFTER = 2020-01-01
 MARC_LIBCODE = CZ-PrNML
 MARC_CATCODE = ABA008
 MARC_MESHCODE = czmesh
+## Generate ECIN records - default: no
+#MARC_ANGLO = yes
 
 ### Default MARC export style ###
 ##  line  - for yaz-marcdump conversion to ISO2709 ##
@@ -112,7 +114,9 @@ MESH_TREE = {
 
 #CACHE_IGNORE_ERRORS = True
 
-CACHING = {"CACHE_TYPE": "filesystem", "CACHE_DEFAULT_TIMEOUT": 1800, "CACHE_THRESHOLD": 1000}
+#CACHING = {"CACHE_TYPE": "null"}
+
+CACHING = {"CACHE_TYPE": "FileSystemCache", "CACHE_DEFAULT_TIMEOUT": 1800, "CACHE_THRESHOLD": 1000}
 
 ### Flask-Session params
 ## See: https://flasksession.readthedocs.io/en/latest/
