--- a/flask-app/instance/conf/mtw-dist.ini
+++ b/flask-app/instance/conf/mtw-dist.ini
@@ -40,7 +40,7 @@ CREATED_AFTER = 2020-01-01
 MARC_LIBCODE = CZ-PrNML
 MARC_CATCODE = ABA008
 MARC_MESHCODE = czmesh
-## Generate ECIN records - default: no
+## Generate qualifiers & ECIN records - default: no
 #MARC_ANGLO = yes
 
 ### Default MARC export style ###
