--- a/flask-app/instance/conf/mtw.ini
+++ b/flask-app/instance/conf/mtw.ini
@@ -18,7 +18,7 @@ APP_PATH = /mtw
 ### Host root link prefix - WITHOUT trailing slash ! ###
 #HOST_LINK = http://127.0.0.1:5900
 #HOST_LINK = http://127.0.0.1:55930
-#HOST_LINK = https://mtwsrv.medvik.cz
+HOST_LINK = https://mtwdev.medvik.cz
 
 ### ! Background Worker host:port ! ###
 ## Default - production: http://127.0.0.1:55933/ - development: http://127.0.0.1:5903/ ##
@@ -26,7 +26,7 @@ WORKER_HOST = http://127.0.0.1:5903/
 #WORKER_HOST = http://127.0.0.1:55933/
 
 ### ! Always set ! ###
-TARGET_YEAR = 2022
+TARGET_YEAR = 2021
 
 ### Default previous version year - used for showing modifications ###
 PREV_YEAR_DEF = 2020
@@ -40,7 +40,7 @@ CREATED_AFTER = 2020-01-01
 MARC_LIBCODE = CZ-PrNML
 MARC_CATCODE = ABA008
 MARC_MESHCODE = czmesh
-## Generate ECIN records - default: no
+## Generate qualifiers & ECIN records - default: no
 #MARC_ANGLO = yes
 
 ### Default MARC export style ###
