--- a/flask-app/instance/conf/mtw.ini
+++ b/flask-app/instance/conf/mtw.ini
@@ -160,7 +160,7 @@ TARGET_NS = http://mesh.medvik.cz/link/
 ### DO NOT EDIT BELOW THIS LINE ###
 
 ### MeSH RDF SPARQL Endpoint
-#MESH_RDF = http://id.nlm.nih.gov/mesh/sparql
+#MESH_RDF = https://id.nlm.nih.gov/mesh/sparql
 
 ### Source namespace vocabulary ###
 #SOURCE_NS_VOCAB = http://id.nlm.nih.gov/mesh/vocab#
