--- a/flask-app/instance/conf/mtw.ini
+++ b/flask-app/instance/conf/mtw.ini
@@ -26,15 +26,15 @@ WORKER_HOST = http://127.0.0.1:5903/
 #WORKER_HOST = http://127.0.0.1:55933/
 
 ### ! Always set ! ###
-TARGET_YEAR = 2021
+TARGET_YEAR = 2022
 
 ### Default previous version year - used for showing modifications ###
-PREV_YEAR_DEF = 2020
+PREV_YEAR_DEF = 2021
 PREV_YEARS = 2015,2016,2017,2018,2019,2020,2021
 
 ### Date format:  YYYY-MM-DD ###
-REVISED_AFTER = 2020-01-01
-CREATED_AFTER = 2020-01-01
+REVISED_AFTER = 2021-01-01
+CREATED_AFTER = 2021-01-01
 
 ### ! Always set ! ###
 MARC_LIBCODE = CZ-PrNML
@@ -161,6 +161,8 @@ TARGET_NS = http://mesh.medvik.cz/link/
 
 ### MeSH RDF SPARQL Endpoint
 #MESH_RDF = https://id.nlm.nih.gov/mesh/sparql
+
+#MESH_WEB = https://id.nlm.nih.gov/mesh/
 
 ### Source namespace vocabulary ###
 #SOURCE_NS_VOCAB = http://id.nlm.nih.gov/mesh/vocab#
