--- a/flask-app/instance/conf/mtw-dist.ini
+++ b/flask-app/instance/conf/mtw-dist.ini
@@ -131,9 +131,9 @@ SESSIONS = {"SESSION_COOKIE_NAME": "mtwsession", "SESSION_TYPE": "filesystem", "
 
 GCSP = {"script-src":  "'self' ",
         "connect-src": "'self' *.medvik.cz *.nlk.cz",
-        "style-src":   "'self' data: 'unsafe-inline'",
+        "style-src":   "'self' fonts.googleapis.com *.gstatic.com data: 'unsafe-inline'",
         "frame-src":   "'self' ",
-        "font-src":    "'self' ",
+        "font-src":    "'self' *.gstatic.com",
         "img-src":     "'self' *.medvik.cz *.nlk.cz data:"
         }
 
