--- a/flask-app/instance/conf/mtw-dist.ini
+++ b/flask-app/instance/conf/mtw-dist.ini
@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-# *** Config version 1.4.5 ***
+# *** Config version 1.4.6 ***
 ### Important values are marked with !  ###
 ### ! This file MUST BE UTF-8 encoded ! ###
 ### ! Restart the App after modifying ! ###
@@ -18,7 +18,7 @@ APP_PATH = /mtw
 ### Host root link prefix - WITHOUT trailing slash ! ###
 #HOST_LINK = http://127.0.0.1:5900
 #HOST_LINK = http://127.0.0.1:55930
-HOST_LINK = https://mtwsrv.medvik.cz
+HOST_LINK = https://test.medvik.cz
 
 ### ! Background Worker host:port ! ###
 ## Default - production: http://127.0.0.1:55933/ - development: http://127.0.0.1:5903/ ##
