--- a/flask-app/instance/conf/mtw.ini
+++ b/flask-app/instance/conf/mtw.ini
@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-# *** Config version 1.4.5 ***
+# *** Config version 1.4.6 ***
 ### Important values are marked with !  ###
 ### ! This file MUST BE UTF-8 encoded ! ###
 ### ! Restart the App after modifying ! ###
@@ -16,9 +16,9 @@ APP_PATH = /mtw
 
 ### ! Required ! ###
 ### Host root link prefix - WITHOUT trailing slash ! ###
-#HOST_LINK = http://127.0.0.1:5900
+HOST_LINK = http://127.0.0.1:5900
 #HOST_LINK = http://127.0.0.1:55930
-HOST_LINK = https://mtwdev.medvik.cz
+#HOST_LINK = https://test.medvik.cz
 
 ### ! Background Worker host:port ! ###
 ## Default - production: http://127.0.0.1:55933/ - development: http://127.0.0.1:5903/ ##
@@ -114,9 +114,9 @@ CSRF_COOKIE_SECURE = False
 
 #CACHE_IGNORE_ERRORS = True
 
-#CACHING = {"CACHE_TYPE": "null"}
+CACHING = {"CACHE_TYPE": "null"}
 
-CACHING = {"CACHE_TYPE": "FileSystemCache", "CACHE_DEFAULT_TIMEOUT": 1800, "CACHE_THRESHOLD": 1000}
+#CACHING = {"CACHE_TYPE": "FileSystemCache", "CACHE_DEFAULT_TIMEOUT": 1800, "CACHE_THRESHOLD": 1000}
 
 ### Flask-Session params
 ## See: https://flasksession.readthedocs.io/en/latest/
