--- a/flask-app/instance/conf/mtw.ini
+++ b/flask-app/instance/conf/mtw.ini
@@ -26,11 +26,11 @@ WORKER_HOST = http://127.0.0.1:5903/
 #WORKER_HOST = http://127.0.0.1:55933/
 
 ### ! Always set ! ###
-TARGET_YEAR = 2022
+TARGET_YEAR = 2023
 
 ### Default previous version year - used for showing modifications ###
-PREV_YEAR_DEF = 2021
-PREV_YEARS = 2015,2016,2017,2018,2019,2020,2021
+PREV_YEAR_DEF = 2022
+PREV_YEARS = 2015,2016,2017,2018,2019,2020,2021,2022
 
 ### Date format:  YYYY-MM-DD ###
 REVISED_AFTER = 2021-01-01
@@ -114,9 +114,9 @@ CSRF_COOKIE_SECURE = False
 
 #CACHE_IGNORE_ERRORS = True
 
-CACHING = {"CACHE_TYPE": "null"}
+#CACHING = {"CACHE_TYPE": "null"}
 
-#CACHING = {"CACHE_TYPE": "FileSystemCache", "CACHE_DEFAULT_TIMEOUT": 1800, "CACHE_THRESHOLD": 1000}
+CACHING = {"CACHE_TYPE": "FileSystemCache", "CACHE_DEFAULT_TIMEOUT": 1800, "CACHE_THRESHOLD": 1000}
 
 ### Flask-Session params
 ## See: https://flasksession.readthedocs.io/en/latest/
