--- a/flask-app/instance/conf/mtw-dist.ini
+++ b/flask-app/instance/conf/mtw-dist.ini
@@ -17,11 +17,10 @@ APP_PATH = /mtw
 ### ! Required ! ###
 ### Host root link prefix - WITHOUT trailing slash ! ###
 #HOST_LINK = http://127.0.0.1:55930
-HOST_LINK = https://test.medvik.cz
+HOST_LINK = https://dev.medvik.cz
 
 ### ! Background Worker host:port ! ###
 ## Default - production: http://127.0.0.1:55933/ - development: http://127.0.0.1:5903/ ##
-#WORKER_HOST = http://127.0.0.1:5903/
 WORKER_HOST = http://127.0.0.1:55933/
 
 ### ! Always set ! ###
@@ -32,8 +31,8 @@ PREV_YEAR_DEF = 2022
 PREV_YEARS = 2015,2016,2017,2018,2019,2020,2021,2022
 
 ### Date format:  YYYY-MM-DD ###
-REVISED_AFTER = 2021-01-01
-CREATED_AFTER = 2021-01-01
+REVISED_AFTER = 2022-01-01
+CREATED_AFTER = 2022-01-01
 
 ### ! Always set ! ###
 MARC_LIBCODE = CZ-PrNML
