--- a/flask-app/.vscode/launch.json
+++ b/flask-app/.vscode/launch.json
@@ -2,25 +2,42 @@
     "version": "0.2.0",
     "configurations": [         
         {
-            "name": "Python: Flask",
+            "name": "Python: MTW Server",
             "type": "python",
             "request": "launch",
             "module": "flask",
             "justMyCode": false,
             "env": {
                 "FLASK_APP": "run-server-dev.py",
-                //"FLASK_APP": "run-worker-dev.py",
                 "FLASK_ENV": "development",
                 "FLASK_DEBUG": "1"
             },
             "args": [
                 "run",
                 "--port=5900",
-                //"--port=5903",
                 "--debugger",
                 "--reload"
             ],
             "jinja": true
-        }     
+        },
+        {
+        "name": "Python: MTW Worker",
+        "type": "python",
+        "request": "launch",
+        "module": "flask",
+        "justMyCode": false,
+        "env": {
+            "FLASK_APP": "run-worker-dev.py",
+            "FLASK_ENV": "development",
+            "FLASK_DEBUG": "1"
+        },
+        "args": [
+            "run",
+            "--port=5903",
+            "--debugger",
+            "--reload"
+        ],
+        "jinja": true
+    }              
     ]
 }
