--- a/flask-app/instance/conf/mtw-dist.ini
+++ b/flask-app/instance/conf/mtw-dist.ini
@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-# *** Config version 1.4.10 ***
+# *** Config version 1.5.1 ***
 ### Important values are marked with !  ###
 ### ! This file MUST BE UTF-8 encoded ! ###
 ### ! Restart the App after modifying ! ###
@@ -16,7 +16,6 @@ APP_PATH = /mtw
 
 ### ! Required ! ###
 ### Host root link prefix - WITHOUT trailing slash ! ###
-#HOST_LINK = http://127.0.0.1:55930
 HOST_LINK = https://dev.medvik.cz
 
 ### ! Background Worker host:port ! ###
@@ -66,29 +65,6 @@ MARC_TREE = daw
 ##  Default: /mtw/search/ui:
 AUT_LINK = https://www.medvik.cz/link/
 
-### ! Translated MeSH Tree Top ! ###
-MESH_TREE = {
-              "A": {"en": "Anatomy", "cs": "Anatomie"},
-              "B": {"en": "Organisms", "cs": "Organismy"},
-              "C": {"en": "Diseases", "cs": "Nemoci"},
-              "D": {"en": "Chemicals and Drugs", "cs": "Chemikálie a léčiva"},
-              "E": {"en": "Analytical, Diagnostic and Therapeutic Techniques and Equipment",
-                    "cs": "Analytické, diagnostické a terapeutické techniky a přístroje"},
-              "F": {"en": "Psychiatry and Psychology", "cs": "Psychiatrie a psychologie"},
-              "G": {"en": "Phenomena and Processes", "cs": "Jevy a procesy"},
-              "H": {"en": "Disciplines and Occupations", "cs": "Obory a povolání"},
-              "I": {"en": "Anthropology, Education, Sociology and Social Phenomena",
-                    "cs": "Antropologie, vzdělávání, sociologie a sociální jevy"},
-              "J": {"en": "Technology, Industry, Agriculture", "cs": "Technologie, průmysl a zemědělství"},
-              "K": {"en": "Humanities", "cs": "Humanitní vědy"},
-              "L": {"en": "Information Science", "cs": "Informační vědy"},
-              "M": {"en": "Named Groups", "cs": "Lidé"},
-              "N": {"en": "Health Care", "cs": "Zdravotní péče"},
-              "V": {"en": "Publication Characteristics", "cs": "Publikační charakteristiky"},
-              "Y": {"en": "Qualifiers (Subheadings)", "cs": "Kvalifikátory (podhesla)"},
-              "Z": {"en": "Geographicals", "cs": "Geografická místa"}
-            }
-
 ### Data directories ###
 ## Defaults: relative to app directory: .../flask-app/instance/_data/... ##
 #SRC_DIR = D:/Data/mesh/in
@@ -100,31 +76,21 @@ MESH_TREE = {
 ### Default management database name ###
 #DATABASE_NAME = mtw.db
 
-### Default - in production: False
-#DEV_DISABLE_CSRF = True
-
-### Default - in production: True
-#CSRF_COOKIE_SECURE = False
-
 ### Flask-Caching params
 ## See: https://flask-caching.readthedocs.io/en/latest/
-
-#CACHE_IGNORE_ERRORS = True
-
-#CACHING = {"CACHE_TYPE": "null"}
 
 CACHING = {"CACHE_TYPE": "FileSystemCache", "CACHE_DEFAULT_TIMEOUT": 1800, "CACHE_THRESHOLD": 1000}
 
 ### Flask-Session params
 ## See: https://flasksession.readthedocs.io/en/latest/
 
-## - in development:
-#SESSIONS = {"SESSION_COOKIE_NAME": "mtwdevsession", "SESSION_TYPE": "filesystem", "PERMANENT_SESSION_LIFETIME": 14400, "SESSION_KEY_PREFIX": "MTWS",
-#             "SESSION_FILE_THRESHOLD": 1000, "SESSION_COOKIE_SECURE": false, "SESSION_COOKIE_SAMESITE": "Lax", "SESSION_PERMANENT": false }
+## - in development/testing:
+#SESSIONS = {"SESSION_COOKIE_NAME": "mtwdevsession", "PERMANENT_SESSION_LIFETIME": 14400, "SESSION_KEY_PREFIX": "MTWSDEV",
+#             "SESSION_FILE_THRESHOLD": 1000, "SESSION_COOKIE_SECURE": false, "SESSION_PERMANENT": false }
 
 ## - in production:
-SESSIONS = {"SESSION_COOKIE_NAME": "mtwsession", "SESSION_TYPE": "filesystem", "PERMANENT_SESSION_LIFETIME": 14400, "SESSION_KEY_PREFIX": "MTWS",
-            "SESSION_FILE_THRESHOLD": 1000, "SESSION_COOKIE_SECURE": true, "SESSION_COOKIE_SAMESITE": "Lax", "SESSION_PERMANENT": true }
+SESSIONS = {"SESSION_COOKIE_NAME": "mtwsession", "PERMANENT_SESSION_LIFETIME": 14400, "SESSION_KEY_PREFIX": "MTWS",
+            "SESSION_FILE_THRESHOLD": 1000, "SESSION_COOKIE_SECURE": true, "SESSION_PERMANENT": true }
 
 GCSP = {"script-src":  "'self' ",
         "connect-src": "'self' *.medvik.cz *.nlk.cz",
@@ -176,5 +142,5 @@ TRX_NOTES = annotation,considerAlso,historyNote
 
 DESC_NOTES = annotation,considerAlso,historyNote,onlineNote,publicMeSHNote,translatorsNote
 
-ROLES = manager,editor,contributor,viewer,disabled
+ROLES = manager,editor,contributor,viewer,disabled,locked
 
