--- a/flask-app/instance/conf/mtw-dist.ini
+++ b/flask-app/instance/conf/mtw-dist.ini
@@ -16,7 +16,7 @@ APP_PATH = /mtw
 
 ### ! Required ! ###
 ### Host root link prefix - WITHOUT trailing slash ! ###
-HOST_LINK = https://dev.medvik.cz
+HOST_LINK = http://127.0.0.1
 
 ### ! Background Worker host:port ! ###
 WORKER_HOST = http://127.0.0.1:55933/
@@ -84,11 +84,6 @@ CACHING = {"CACHE_TYPE": "FileSystemCache", "CACHE_DEFAULT_TIMEOUT": 1800, "CACH
 ### Flask-Session params
 ## See: https://flasksession.readthedocs.io/en/latest/
 
-## - in development/testing:
-#SESSIONS = {"SESSION_COOKIE_NAME": "mtwdevsession", "PERMANENT_SESSION_LIFETIME": 14400, "SESSION_KEY_PREFIX": "MTWSDEV",
-#             "SESSION_FILE_THRESHOLD": 1000, "SESSION_COOKIE_SECURE": false, "SESSION_PERMANENT": false }
-
-## - in production:
 SESSIONS = {"SESSION_COOKIE_NAME": "mtwsession", "PERMANENT_SESSION_LIFETIME": 14400, "SESSION_KEY_PREFIX": "MTWS",
             "SESSION_FILE_THRESHOLD": 1000, "SESSION_COOKIE_SECURE": true, "SESSION_PERMANENT": true }
 
@@ -99,7 +94,6 @@ GCSP = {"script-src":  "'self' ",
         "font-src":    "'self' *.gstatic.com",
         "img-src":     "'self' *.medvik.cz *.nlk.cz data:"
         }
-
 
 [sparqlconf]
 
