--- a/flask-app/instance/conf/mtw-dist.ini
+++ b/flask-app/instance/conf/mtw-dist.ini
@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-# *** Config version 1.5.1 ***
+# *** Config version 1.5.2 ***
 ### Important values are marked with !  ###
 ### ! This file MUST BE UTF-8 encoded ! ###
 ### ! Restart the App after modifying ! ###
@@ -94,6 +94,8 @@ GCSP = {"script-src":  "'self' ",
         "font-src":    "'self' *.gstatic.com",
         "img-src":     "'self' *.medvik.cz *.nlk.cz data:"
         }
+
+CHAR_NORM_FILE = norm_chars_table.tsv.txt         
 
 [sparqlconf]
 
