--- a/flask-app/instance/conf/mtw.ini
+++ b/flask-app/instance/conf/mtw.ini
@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-# *** Config version 1.5.2 ***
+# *** Config version 1.5.5 ***
 ### Important values are marked with !  ###
 ### ! This file MUST BE UTF-8 encoded ! ###
 ### ! Restart the App after modifying ! ###
@@ -9,20 +9,13 @@
 
 [appconf]
 
-## Default: /
-## Always starts with: /
-## No trailing slash !
-APP_PATH = /mtw
-
-### ! Required ! ###
-### Host root link prefix - WITHOUT trailing slash ! ###
-HOST_LINK = http://127.0.0.1
-#HOST_LINK = https://test.medvik.cz
+### Fully qualified domain name - required !
+##  - You can override it with --fqdn param
+#SERVER_NAME = 127.0.0.1
 
 ### ! Background Worker host:port ! ###
 ## Default - production: http://127.0.0.1:55933/ - development: http://127.0.0.1:5903/ ##
 WORKER_HOST = http://127.0.0.1:5903/
-#WORKER_HOST = http://127.0.0.1:55933/
 
 ### ! Always set ! ###
 TARGET_YEAR = 2024
@@ -89,21 +82,25 @@ CSRF_COOKIE_SECURE = False
 ## See: https://flask-caching.readthedocs.io/en/latest/
 
 #CACHE_IGNORE_ERRORS = True
-
 #CACHING = {"CACHE_TYPE": "null"}
 
-CACHING = {"CACHE_TYPE": "FileSystemCache", "CACHE_DEFAULT_TIMEOUT": 1800, "CACHE_THRESHOLD": 1000}
+CACHING = {"CACHE_TYPE": "FileSystemCache", "CACHE_DEFAULT_TIMEOUT": 1800, "CACHE_THRESHOLD": 500}
 
 ### Flask-Session params
 ## See: https://flasksession.readthedocs.io/en/latest/
 
-## - in development/testing:
-SESSIONS = {"SESSION_COOKIE_NAME": "mtwdevsession", "PERMANENT_SESSION_LIFETIME": 14400, "SESSION_KEY_PREFIX": "MTWSDEV",
-            "SESSION_FILE_THRESHOLD": 1000, "SESSION_COOKIE_SECURE": false, "SESSION_PERMANENT": false }
+SESSIONS = {
+            "SESSION_COOKIE_NAME": "mtwdevsession", "SESSION_KEY_PREFIX": "MTWSDEV",
+            "SESSION_COOKIE_SAMESITE": "Lax",
+            "SESSION_COOKIE_SECURE": false,
+            "SESSION_PERMANENT": false,
+            "SESSION_COOKIE_SECURE": false,
+            "SESSION_REVERSE_PROXY": false,
+            "SESSION_USE_SIGNER": false
+            }
 
-## - in production:
-#SESSIONS = {"SESSION_COOKIE_NAME": "mtwsession", "PERMANENT_SESSION_LIFETIME": 14400, "SESSION_KEY_PREFIX": "MTWS",
-#            "SESSION_FILE_THRESHOLD": 1000, "SESSION_COOKIE_SECURE": true, "SESSION_PERMANENT": true }
+## "SESSION_PERMANENT": true,
+## "PERMANENT_SESSION_LIFETIME": 1s * 60 * 10 = 600 - 10 min
 
 GCSP = {"script-src":  "'self' ",
         "connect-src": "'self' *.medvik.cz *.nlk.cz",
@@ -114,7 +111,6 @@ GCSP = {"script-src":  "'self' ",
         }
 
 CHAR_NORM_FILE = norm_chars_table.tsv.txt        
-
 
 [sparqlconf]
 
