--- a/flask-app/.vscode/launch.json
+++ b/flask-app/.vscode/launch.json
@@ -14,7 +14,7 @@
             },
             "args": [
                 "run",
-                "--port=80",
+                //"--port=80",
                 //"--port=5900",
                 "--debugger",
                 "--reload" 
@@ -52,9 +52,9 @@
             },
             "args": [
                 "--port", "80",
-                "--config", "conf/mtw.ini",
+                //"--config", "conf/mtw.ini",
                 //"--config", "conf/mtw-fr.ini",
-                "--debug", 
+                //"--debug", 
                 "--relax"
             ],
             "jinja": true
@@ -70,10 +70,10 @@
                 "FLASK_DEBUG": "1"
             },
             "args": [
-                "--port", "5903",
-                "--config", "conf/mtw.ini",
+                //"--port", "5903",
+                //"--config", "conf/mtw.ini",
                 //"--config", "conf/mtw-fr.ini",
-                "--debug"
+                //"--debug"
             ],
             "jinja": true
         },                
