--- a/flask-app/instance/conf/mtw.ini
+++ b/flask-app/instance/conf/mtw.ini
@@ -9,7 +9,7 @@
 
 [appconf]
 
-### Fully qualified domain name - required !
+### Fully qualified domain name - use in production only
 ##  - You can override it with --fqdn param
 #SERVER_NAME = 127.0.0.1
 
