--- a/flask-app/instance/conf/mtw-dist.ini
+++ b/flask-app/instance/conf/mtw-dist.ini
@@ -10,7 +10,7 @@
 [appconf]
 
 ### ! Fully qualified domain name - required !
-##  - You can override it with --fqdn param
+##  - You can override it with --fqdn param when running mtw-server
 SERVER_NAME = 127.0.0.1
 
 WORKER_HOST = http://127.0.0.1:55933/
