--- a/flask-app/instance/conf/mtw-dist.ini
+++ b/flask-app/instance/conf/mtw-dist.ini
@@ -13,7 +13,9 @@
 ##  - You can override it with --fqdn param when running mtw-server
 SERVER_NAME = 127.0.0.1
 
-### You MUST copy the content of the static dir into Apache htdocs root or the equivalent and rename it to assets-mtw
+### You MUST copy the content of the static dir 
+##  into Apache htdocs root or the equivalent 
+##  and rename it to: assets-mtw
 
 WORKER_HOST = http://127.0.0.1:55933/
 
