--- a/flask-app/instance/conf/mtw-dist.ini
+++ b/flask-app/instance/conf/mtw-dist.ini
@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-# *** Config version 1.5.5 ***
+# *** Config version 1.6.0 ***
 ### Important values are marked with !  ###
 ### ! This file MUST BE UTF-8 encoded ! ###
 ### ! Restart the App after modifying ! ###
@@ -11,6 +11,7 @@
 
 ### ! Fully qualified domain name - required !
 ##  - You can override it with --fqdn param when running mtw-server
+#SERVER_NAME = test.medvik.cz
 SERVER_NAME = 127.0.0.1
 
 ### You MUST copy the content of the static dir 
@@ -99,6 +100,13 @@ GCSP = {"script-src":  "'self' ",
         }
 
 CHAR_NORM_FILE = norm_chars_table.tsv.txt         
+
+### MTW Worker API settings
+[worker]
+API_STATUS = private
+API_TIMEOUT = 10
+API_TOKEN_MAX_AGE = 5
+
 
 [sparqlconf]
 
