--- a/flask-app/instance/conf/mtw.ini
+++ b/flask-app/instance/conf/mtw.ini
@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-# *** Config version 1.5.5 ***
+# *** Config version 1.6.0 ***
 ### Important values are marked with !  ###
 ### ! This file MUST BE UTF-8 encoded ! ###
 ### ! Restart the App after modifying ! ###
@@ -110,7 +110,14 @@ GCSP = {"script-src":  "'self' ",
         "img-src":     "'self' *.medvik.cz *.nlk.cz data:"
         }
 
-CHAR_NORM_FILE = norm_chars_table.tsv.txt        
+CHAR_NORM_FILE = norm_chars_table.tsv.txt
+
+### MTW Worker API settings
+[worker]
+API_STATUS = private
+API_TIMEOUT = 10
+API_TOKEN_MAX_AGE = 5
+
 
 [sparqlconf]
 
